--- a/HCMS/appsettings.json
+++ b/HCMS/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Server": "localhost",
+    "DB": "HMSDB",
+    "UserName": "sa",
+    "Password": "P@ssw0rd123"
+  }
 }
