final changes before presentation

--- a/HCMS/appsettings.Development.json
+++ b/HCMS/appsettings.Development.json
@@ -7,9 +7,9 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Server": "localhost",
-    "DB": "HMSDB",
-    "UserName": "sa",
-    "Password": "P@ssw0rd123"
+    "Server": "(localdb)\\MSSQLLocalDB",
+    //"DB": "HMSDB",
+    //"UserName": "sa",
+    //"Password": "P@ssw0rd123"
   }
 }
