--- a/HCMSapi/appsettings.json
+++ b/HCMSapi/appsettings.json
@@ -6,10 +6,15 @@
     }
   },
   "AllowedHosts": "*",
-
-  "JWT": {
-    "Audience": "User",
-    "Issuer": "http://localhost:30010",
-    "Key": "THISISMYSecretKey12345678"
+  "ConnectionStrings": {
+    "Server": "(localdb)\\MSSQLLocalDB",
+    "DB": "HMSDB",
+    "UserName": "sa",
+    "Password": "P@ssw0rd123"
+  },
+    "JWT": {
+      "Audience": "User",
+      "Issuer": "http://localhost:30010",
+      "Key": "THISISMYSecretKey12345678"
+    }
   }
-}
