--- a/HCMS/appsettings.json
+++ b/HCMS/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Server": "localhost",
+    "Server": "(localdb)\\MSSQLLocalDB",
     "DB": "HMSDB",
     "UserName": "sa",
     "Password": "P@ssw0rd123"
