--- a/HCMSapi/appsettings.Development.json
+++ b/HCMSapi/appsettings.Development.json
@@ -4,5 +4,12 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Server": "(localdb)\\MSSQLLocalDB",
+    "DB": "HMSDB",
+    "UserName": "sa",
+    "Password": "P@ssw0rd123"
   }
 }
