--- a/HCMSapi/appsettings.json
+++ b/HCMSapi/appsettings.json
@@ -6,15 +6,16 @@
     }
   },
   "AllowedHosts": "*",
+  "ApiKey": "RANDomValuetoDenoteAPIKeyWithNumbers131235",
   "ConnectionStrings": {
     "Server": "(localdb)\\MSSQLLocalDB",
     "DB": "HMSDB",
     "UserName": "sa",
     "Password": "P@ssw0rd123"
   },
-    "JWT": {
-      "Audience": "User",
-      "Issuer": "http://localhost:30010",
-      "Key": "THISISMYSecretKey12345678"
-    }
+  "JWT": {
+    "Audience": "User",
+    "Issuer": "http://localhost:30010",
+    "Key": "THISISMYSecretKey12345678"
   }
+}
